# MattJColes_lgtmaybe

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  action.yml  commitlint.config.cjs  manual-steps.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: action-e2e.yml  audit.yml  ci.yml  commitlint.yml  docs.yml  e2e-ollama.yml  lint-fix.yml  release-please.yml  release.yml
docs/: generate_reference.py  index.md
docs/explanation/: architecture.md  auth-model.md  data-and-privacy.md  trust-and-cost.md  what-gets-reviewed.md
docs/how-to/: configure-lgtmaybe-yml.md  fix-findings-with-an-ai-agent.md  releasing.md  review-with-azure.md  review-with-bedrock-oidc.md  review-with-vertex-wif.md  run-locally-with-ollama.md  use-as-github-action.md
docs/reference/: config.md
docs/stylesheets/: extra.css
docs/tutorial/: getting-started.md
evals/: __init__.py  run.py  scorer.py
evals/fixtures/badcode/: diff.txt  expected.json
evals/fixtures/vibe-multifile/: diff.txt  expected.json
examples/workflows/: review-anthropic.yml  review-azure.yml  review-bedrock.yml  review-ollama.yml  review-openai.yml  review-openrouter.yml  review-vertex.yml
overrides/: main.html
src/lgtmaybe/: __init__.py  __main__.py
src/lgtmaybe/cli/: __init__.py  commands.py  render.py  runtime.py  slash.py
src/lgtmaybe/config/: __init__.py  loader.py  store.py
src/lgtmaybe/core/: __init__.py  diffparse.py  logging.py  models.py  ports.py
src/lgtmaybe/engine/: __init__.py  compress.py  engine.py  injection.py  parse.py  prompt.py  redact.py  reflect.py
src/lgtmaybe/github/: __init__.py  diff.py  rest_gateway.py
src/lgtmaybe/local/: __init__.py
src/lgtmaybe/providers/: __init__.py  constants.py  credentials.py  factory.py  litellm_provider.py
tests/: conftest.py  test_code_quality.py  test_fakes_wiring.py  test_logging.py  test_models.py  test_packaging.py  test_ports.py
tests/cli/: test_action.py  test_cli.py  test_config_cmd.py  test_integration_e2e.py  test_provider_threading.py  test_render.py  test_slash.py
tests/config/: test_loader.py  test_store.py
tests/core/: test_diffparse.py
tests/docs/: test_reference_fresh.py
tests/engine/: test_caps.py  test_compress.py  test_engine.py  test_injection.py  test_parse.py  test_prompt.py  test_redact.py  test_reflect.py
tests/evals/: test_fixtures.py  test_run.py  test_scorer.py
tests/fakes/: __init__.py  engine.py  github.py  provider.py
tests/github/: test_diff.py  test_post_review.py  test_rest_gateway.py
tests/github/fixtures/: pr_commits.json  pr_detail.json  pr_diff.patch  pr_files_page1.json  pr_files_page2.json
tests/local/: test_git_context.py
tests/providers/: test_credentials.py  test_factory.py  test_litellm_provider.py  test_ollama.py  test_provider_matrix.py  test_retry.py
tests/snapshots/: PRContext.json  ProviderResult.json  ReviewConfig.json  ReviewFinding.json
