[project]
name = "lgtmaybe"
version = "0.0.1"
description = "Provider-agnostic PR reviewer — five providers, one flag, no keys in secrets for cloud."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Matt Coles" }]
dependencies = [
    "click>=8.4.1",
    "httpx>=0.28.1",
    "litellm>=1.87.1",
    "pydantic>=2.7",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]

[project.scripts]
lgtmaybe = "lgtmaybe.cli:main"

[project.urls]
Homepage = "https://github.com/lgtmaybe/lgtmaybe"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lgtmaybe"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
packages = ["lgtmaybe"]
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true
