[project]
name = "lgtmaybe"
version = "0.1.1"
description = "Provider-agnostic PR reviewer — six providers, one flag, no keys in secrets for cloud."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Matt Coles" }]
dependencies = [
    "click>=8.4.1",
    "httpx>=0.28.1",
    "litellm>=1.87.1",
    "pydantic>=2.7",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
# Keyless Azure OpenAI (Azure AD / Entra token via GitHub OIDC or local creds).
# Only needed for `--provider azure` without an API key; the Action image bundles it.
azure = [
    "azure-identity>=1.19",
]

[project.scripts]
lgtmaybe = "lgtmaybe.cli:main"

[project.urls]
Homepage = "https://mattjcoles.github.io/lgtmaybe/"
Repository = "https://github.com/MattJColes/lgtmaybe"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lgtmaybe"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["lgtmaybe", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Code-quality gate: using a deprecated API (ours, the stdlib's, or a dependency's
# triggered on our hot path) is a hard error, not silent noise. This is fully
# deterministic given the lockfile. If a *third-party* deprecation we don't
# control starts failing after a dependency bump, add a narrow ignore here
# (e.g. 'ignore::DeprecationWarning:somelib') rather than weakening the rule.
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
packages = ["lgtmaybe"]
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# azure-identity is an optional extra (keyless Azure); it ships no stubs.
module = ["azure.*"]
ignore_missing_imports = true
